--- a/index.html
+++ b/index.html
@@ -16,16 +16,25 @@
     </header>
 
     <main>
-        <img class = "beignet" src="/assets/images/beignet.png" alt="decorative">
-        <img class = "vector_1" src="/assets/images/Vector_1.png" alt="decorative">
-        <p class = "first">
+        <!-- <p class = "first">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
+        </p> -->
+        <div class="grid-container">
+            <div class="grid-item">
+                <img class = 'temp' src="assets/images/necklace1.png" alt="image">
+            </div>
+            <!-- <div class="grid-item">
+                <img loading="lazy" src="assets/images/orangesquare.png" alt="image">
+            </div> -->
+            <div class="grid-item">
+                <img class = 'temp' src="assets/images/necklace2.png" alt="image">
+            </div>
+        </div>
     </main>
 
     
 
     <!-- Link to JavaScript file -->
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
